# kaladont

./: .gitignore  LICENSE  README.md
client/: Makefile  client.c  client_posix.c  client_windows.c  main.c
client/executable/: kaladont_client
src/: CMakeLists.txt  Makefile  c_string.c  computer.c  gameplay.c  main.c  server.c  settings.json  utils.c  valgrind-out.txt  words.txt
src/executable/: kaladont
src/headers/: c_string.h  computer.h  gameplay.h  server.h  utils.h
src/server/: server_posix.c  server_windows.c
src/settings/: settings.json  small.txt  small2.txt
